--- a/src/templates/_cp/elementsEdit.twig
+++ b/src/templates/_cp/elementsEdit.twig
@@ -1,6 +1,6 @@
 {% import "_includes/forms" as forms %}
 
-{% do view.registerAssetBundle("goldinteractive\\sitecopy\\assetbundles\\sitecopy\\SitecopyAsset") %}
+{% do view.registerAssetBundle("neustadt\\sitecopy\\assetbundles\\sitecopy\\SitecopyAsset") %}
 
 {% set siteCopyTargetOptions = craft.sitecopy.getSiteInputOptions(supportedSites, [siteId]) %}
 
